--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ body {
   width: 540px;
   border-radius: 15px;
   position: relative;
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.04);
 }
 
 .innerCard{
@@ -53,7 +54,6 @@ body {
 .divImg {
   padding-top: 35px;
   width: 455px;
-  padding-bottom: 0px;
 }
 
 .spacer {
@@ -67,9 +67,34 @@ body {
   }
 }
 
-@media screen and ( max-height: 700px ) {
+@media screen and ( max-width: 700px ) {
+  .card {
+    width: calc(100vw - 34px);
+    max-width: 540px;
+    margin-left: 17px;
+    margin-right: 17px;
+    min-height: 315px;
+    margin-bottom: 100px;
+  }
 
-  
+  .divImg {
+    padding-top: 20px;
+    width: 100%;
+  }
 
+  .title{
+    padding-top: 40px;
+    font-size: 11px;
+    letter-spacing: 3.5px;
+  }
 
+  .quote {
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 24px;
+  }
+
+  .spacer {
+    height: 60px;
+  }
 }
